--- a/igm.html
+++ b/igm.html
@@ -17,7 +17,7 @@
     <!-- 이미지 갤러리 -->
     <section class="gallery">
       <ul class="images">
-        <li class="img"><img src="" alt="img" /></li>
+        <li class="img"><img src="images/11.jpg" alt="img" /></li>
         <li class="img"><img src="images/1.jpg" alt="img" /></li>
         <li class="img"><img src="images/2.jpg" alt="img" /></li>
         <li class="img"><img src="images/3.jpg" alt="img" /></li>
